--- a/ProyectoG3/src/main/resources/static/Contactos.html
+++ b/ProyectoG3/src/main/resources/static/Contactos.html
@@ -6,14 +6,45 @@
         <title>Información de contacto</title>
     </head>
     <body>
+        <header class="header">
+            <nav class="nav">
+                <h1><a href="index.html" class="nav-link logo">K'alzado</a></h1>
+                <ul class="nav-menu">
+                    <li class="nav-menu-item"><a href="passwordedit.html" class="nav-link nav-menu-link">&triangleleft;</a></li>
+                    <li class="nav-menu-item"><a href="info_cliente.html" class="nav-link nav-menu-link">&triangleright;</a></li>
+                    <li class="nav-menu-item"><a href="Contactos.html" class="nav-link nav-menu-link">Contactos</a></li>
+                    <li class="nav-menu-item"><a href="Info_cliente.html" class="nav-link nav-menu-link">InfoCliente</a></li>
+                    <li class="nav-menu-item"><a href="UbicacionTienda.html" class="nav-link nav-menu-link">Ubicacion</a></li>
+                </ul> 
+            </nav>
+        </header>
+        <section>
+            <h1>Información de contacto</h1>
 
-        <h1>Información de contacto</h1>
+            <ul>
+                <li>Número de contacto: <a href="tel:"></a></li>
+                <article>
+                    <figure>
+                        <iframe src="link aqui" width="2000" height="400"></iframe></br>
+                    </figure></br>
+                    </br>
 
-        <ul>
-            <li>Número de contacto: <a href="tel:"></a></li>
-            <li>Usuario de Instagram: <a href=""></a></li>
-            <li>Perfil de Facebook: <a href=""></a></li>
-        </ul>
+                </article>
+                <li>Contacto en Maps: <a href=""></a></li>
+                <article>
+                    <h1>Donde estamos</h1>
+                    <figure>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1964.4983801532806!2d-84.21706982731153!3d10.01712520188761!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8fa0f9c4d8260787%3A0x37f5bebec2810098!2sBest%20Brands%20%E2%80%A2%20Alajuela%20Centro!5e0!3m2!1ses-419!2scr!4v1707007007036!5m2!1ses-419!2scr" width="700" height="550" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </figure>
+
+
+                </article>
+                <li>Perfil de Facebook: <a href=""></a></li>
+            </ul>
+        </section>
 
     </body>
+    <footer>
+        <p>Derechos de autor © 2024 - Empresa WizTheArt</p>
+    </footer>
 </html>
