--- a/ProyectoG3/src/main/resources/static/PromocionPagina.html
+++ b/ProyectoG3/src/main/resources/static/PromocionPagina.html
@@ -10,10 +10,22 @@
         <header>
             <h1>Bienvenido a nuestra página de Videos Promocionales</h1>
         </header>
+        <header class="header">
+            <nav class="nav">
+                <h1><a href="index.html" class="nav-link logo">WizTheWizar</a></h1>
+                <ul class="nav-menu">
+                    <li class="nav-menu-item"><a href="Pagina_Inicio.html" class="nav-link nav-menu-link">&triangleleft;</a></li>
+                    <li class="nav-menu-item"><a href="UbicacionTienda.html" class="nav-link nav-menu-link">&triangleright;</a></li>
+                    <li class="nav-menu-item"><a href="Contactos.html" class="nav-link nav-menu-link">Contactos</a></li>
+                    <li class="nav-menu-item"><a href="Info_cliente.html" class="nav-link nav-menu-link">InfoCliente</a></li>
+                    <li class="nav-menu-item"><a href="UbicacionTienda.html" class="nav-link nav-menu-link">Ubicacion</a></li>
+                </ul> 
+            </nav>
+        </header>
         <section id="videos">
             <h2>Videos Promocionales</h2>
             <div class="video">
-                <iframe width="560" height="315" src="https://www.youtube.com/*ESCOGER VIDEO*" frameborder="0" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://wwwm.youtube.com/*ESCOGER VIDEO*" frameborder="0" allowfullscreen></iframe>
             </div>
             <div class="video">
                 <iframe width="560" height="315" src="https://www.youtube.com/*ESCOGER VIDEO*" frameborder="0" allowfullscreen></iframe>
