--- a/ProyectoG3/src/main/resources/static/UbicacionTienda.html
+++ b/ProyectoG3/src/main/resources/static/UbicacionTienda.html
@@ -8,6 +8,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
+        <header class="header">
+            <nav class="nav">
+                <h1><a href="index.html" class="nav-link logo">WizTheWizar</a></h1>
+                <ul class="nav-menu">
+                    <li class="nav-menu-item"><a href="PromocionPagina.html" class="nav-link nav-menu-link">&triangleleft;</a></li>
+                    <li class="nav-menu-item"><a href="VisualProductos.html" class="nav-link nav-menu-link">&triangleright;</a></li>
+                    <li class="nav-menu-item"><a href="Contactos.html" class="nav-link nav-menu-link">Contactos</a></li>
+                    <li class="nav-menu-item"><a href="Info_cliente.html" class="nav-link nav-menu-link">InfoCliente</a></li>
+                    <li class="nav-menu-item"><a href="UbicacionTienda.html" class="nav-link nav-menu-link">Ubicacion</a></li>
+                </ul> 
+            </nav>
+        </header>
         <h1>Localización de la Tienda</h1>
         <button id="btnObtenerDireccion">Obtener Dirección</button>
         <div id="direccionTienda"></div>
@@ -22,4 +34,7 @@
             document.getElementById("btnObtenerDireccion").addEventListener("click", obtenerDireccionTienda);
         </script>
     </body>
+    <footer>
+            <p>Derechos de autor © 2024 - Empresa WizTheArt</p>
+        </footer>
 </html>
