--- a/ProyectoG3/src/main/resources/static/VisualProductos.html
+++ b/ProyectoG3/src/main/resources/static/VisualProductos.html
@@ -1,38 +1,35 @@
 #HISTORIA DE USUARIO = Necesito visualizar los productos que tengo en mi lista de compras
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Carrito de Compras</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-        .container {
-            width: 80%;
-            margin: 20px auto;
-        }
-        .cart {
-            border: 1px solid #ccc;
-            padding: 20px;
-        }
-        h2 {
-            margin-top: 0;
-        }
-    </style>
-</head>
-<body>
-<div class="cont">
-    <h1>WizTheArt</h1>
-    <div class="carrito">
-        <h2>Carrito de Compras</h2>
-        <ul id="carrito-items">
-            *Lista para mostrar los productos*
-        </ul>
-    </div>
-</div>
-</body>
+    <head>
+        <title>Carrito de Compras</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    </head>
+    <body>
+        <header class="header">
+            <nav class="nav">
+                <h1><a href="index.html" class="nav-link logo">WizTheWizar</a></h1>
+                <ul class="nav-menu">
+                    <li class="nav-menu-item"><a href="UbicacionTienda.html" class="nav-link nav-menu-link">&triangleleft;</a></li>
+                    <li class="nav-menu-item"><a href="Contactos.html" class="nav-link nav-menu-link">&triangleright;</a></li>
+                    <li class="nav-menu-item"><a href="Contactos.html" class="nav-link nav-menu-link">Contactos</a></li>
+                    <li class="nav-menu-item"><a href="Info_cliente.html" class="nav-link nav-menu-link">InfoCliente</a></li>
+                    <li class="nav-menu-item"><a href="UbicacionTienda.html" class="nav-link nav-menu-link">Ubicacion</a></li>
+                </ul> 
+            </nav>
+        </header>
+        <div class="cont">
+            <h1>WizTheArt</h1>
+            <div class="carrito">
+                <h2>Carrito de Compras</h2>
+                <ul id="carrito-items">
+                    *Lista para mostrar los productos*
+                </ul>
+            </div>
+        </div>
+    </body>
+    <footer>
+            <p>Derechos de autor © 2024 - Empresa WizTheArt</p>
+        </footer>
 </html>
