--- a/ProyectoG3/src/main/resources/static/Pagina_Inicio.html
+++ b/ProyectoG3/src/main/resources/static/Pagina_Inicio.html
@@ -7,6 +7,18 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+        <header class="header">
+            <nav class="nav">
+                <h1><a href="index.html" class="nav-link logo">WizTheWizar</a></h1>
+                <ul class="nav-menu">
+                    <li class="nav-menu-item"><a href="Info_Cliente.html" class="nav-link nav-menu-link">&triangleleft;</a></li>
+                    <li class="nav-menu-item"><a href="PromocionPagina.html" class="nav-link nav-menu-link">&triangleright;</a></li>
+                    <li class="nav-menu-item"><a href="Contactos.html" class="nav-link nav-menu-link">Contactos</a></li>
+                    <li class="nav-menu-item"><a href="Info_cliente.html" class="nav-link nav-menu-link">InfoCliente</a></li>
+                    <li class="nav-menu-item"><a href="UbicacionTienda.html" class="nav-link nav-menu-link">Ubicacion</a></li>
+                </ul> 
+            </nav>
+        </header>
         <div class="artworks-container">
             <h2>Obras de Van Gogh</h2>
             <div class="artwork">
@@ -20,5 +32,8 @@
                 <img src="" alt="Los Girasoles">
             </div>
         </div>
+        <footer>
+            <p>Derechos de autor © 2024 - Empresa WizTheArt</p>
+        </footer>
     </body>
 </html>
